--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export("%>%")
 export(bond)
 export(chart_PerfSummary)
 export(chart_fwd_curves)
-export(cma)
 export(eia2tidy)
 export(fitOU)
 export(garch)
@@ -19,5 +18,6 @@ export(simGBM)
 export(simOU)
 export(simOUJ)
 export(stl_decomp)
+export(swapCOM)
 export(tradeStats)
 importFrom(magrittr,"%>%")
