--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CRReuro)
 export(bond)
 export(chart_PerfSummary)
 export(chart_fwd_curves)
+export(distdescplot)
 export(eia2tidy)
 export(fitOU)
 export(garch)
