--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,5 +22,6 @@ export(simOU)
 export(simOUJ)
 export(stl_decomp)
 export(swapCOM)
+export(swapIRS)
 export(tradeStats)
 importFrom(magrittr,"%>%")
