--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: RTL
 Type: Package
 Title: Risk Tool Library 
 Version: 0.1.0
-Date: "2020-01-11"
+Date: 2020-01-13
 Authors@R: person("Philippe", "Cote", email = "pcote@ualberta.ca",
                   role = c("aut", "cre"))
 Maintainer: Philippe Cote <pcote@ualberta.ca>
