--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: RTL
 Type: Package
 Title: Risk Tool Library 
-Version: 0.1.0
-Date: 2020-01-13
+Version: 0.1.1
+Date: 2020-01-28
 Authors@R: person("Philippe", "Cote", email = "pcote@ualberta.ca",
                   role = c("aut", "cre"))
 Maintainer: Philippe Cote <pcote@ualberta.ca>
 Description: Collection of functions and metadata to complement core packages
     in Finance and Commodities, including futures expiry tables and Morningstar
-    API functions. See webpage for details.
+    API functions. See https://github.com/risktoollib/RTL.
 Depends: R (>= 3.6)
 License: GPL (>= 3) + file LICENSE
 Encoding: UTF-8
