2020 02 13 cran RTL submission

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,7 @@ Type: Package
 Title: Risk Tool Library 
 Version: 0.1.1
 Date: 2020-01-28
-Authors@R: person("Philippe", "Cote", email = "pcote@ualberta.ca",
-                  role = c("aut", "cre"))
+Authors@R: c(person("Philippe", "Cote", email = "pcote@ualberta.ca",role = c("aut", "cre")),person("Nima", "Safaian", email = "nima.safaian@gmail.com",role = c("aut")))
 Maintainer: Philippe Cote <pcote@ualberta.ca>
 Description: Collection of functions and metadata to complement core packages
     in Finance and Commodities, including futures expiry tables and <http://www.morningstarcommodity.com/>
