--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(distdescplot)
 export(eia2tidy)
 export(fitOU)
 export(garch)
+export(getCurve)
 export(getIRswapCurve)
 export(getPrice)
 export(getPrices)
