2020 08 04 chart_eia_sd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(CRReuro)
 export(bond)
 export(chart_PerfSummary)
+export(chart_eia_sd)
 export(chart_eia_steo)
 export(chart_fwd_curves)
 export(chart_pairs)
