--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(getPrices)
 export(ir_df_us)
 export(npv)
 export(promptBeta)
+export(refineryLP)
 export(returns)
 export(rolladjust)
 export(simGBM)
