--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(simOU)
 export(simOUJ)
 export(stl_decomp)
 export(swapCOM)
+export(swapFutWeight)
 export(swapIRS)
 export(tradeStats)
 importFrom(magrittr,"%>%")
