--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,5 +30,6 @@ export(stl_decomp)
 export(swapCOM)
 export(swapFutWeight)
 export(swapIRS)
+export(swapInfo)
 export(tradeStats)
 importFrom(magrittr,"%>%")
