--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(eia2tidy)
 export(fitOU)
 export(garch)
 export(getCurve)
+export(getGenscapeStorageOil)
 export(getIRswapCurve)
 export(getPrice)
 export(getPrices)
