--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -11,6 +11,9 @@ jobs:
       - uses: actions/checkout@master
       - uses: r-lib/actions/setup-r@master
       - uses: r-lib/actions/setup-pandoc@master
+      - name: Install system dependencies
+        run:
+          sudo apt install libcurl4-openssl-dev
       - name: Install dependencies
         run: |
           Rscript -e 'install.packages("remotes")' \
