--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -21,6 +21,11 @@ jobs:
                   -e 'remotes::install_github("jimhester/pkgdown@github-actions-deploy")'
       - name: Install package
         run: R CMD INSTALL .
+      - name: Establish git credentials
+        run: |
+          install.packages("usethis")
+          usethis::use_git_config(user.name = "risktoollib", user.email = "pcote@ualberta.ca")
+        shell: Rscript {0}
       - name: Deploy package
         run: |
           Rscript -e "pkgdown:::deploy_local(new_process = FALSE, remote_url = 'https://x-access-token:${{secrets.GH_TOKEN}}@github.com/${{github.repository}}.git')"
