--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -19,6 +19,7 @@ jobs:
           install.packages("remotes")
           remotes::install_deps(dependencies = TRUE)
           remotes::install_github("jimhester/pkgdown@github-actions-deploy")
+        shell: Rscript {0}
       - name: Install package
         run: R CMD INSTALL .
 
