--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -7,6 +7,8 @@ name: Pkgdown
 jobs:
   pkgdown:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_PAT: ${{ secrets.GH_TOKEN }}
     steps:
       - uses: actions/checkout@master
       - uses: r-lib/actions/setup-r@master
