--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: RTL
 Type: Package
 Title: Risk Tool Library 
 Version: 0.1.6
-Date: 2021-04-06
+Date: 2021-04-07
 Authors@R: c(person("Philippe", "Cote", email = "pcote@ualberta.ca", role = c("aut", "cre")),person("Nima", "Safaian", email = "nima.safaian@gmail.com", role = c("aut")))
 Description: Collection of functions and metadata to complement core packages
     in Finance and Commodities, including futures expiry tables and <https://www.morningstar.com/products/commodities-and-energy>
@@ -11,6 +11,7 @@ Depends: R (>= 4.0)
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
+LazyDataCompression: xz
 URL: https://github.com/risktoollib/RTL
 Suggests: 
     plotly
