--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(eia2tidy)
 export(fitOU)
 export(garch)
 export(getCurve)
+export(getFutContinuous)
 export(getGenscapePipeOil)
 export(getGenscapeStorageOil)
 export(getIRswapCurve)
