--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Risk Tool Library 
 Version: 0.1.7
 Date: 2021-06-09
-Authors@R: c(person("Philippe", "Cote", email = "pcote@ualberta.ca", role = c("aut", "cre")),person("Nima", "Safaian", email = "nima.safaian@gmail.com", role = c("aut")))
+Authors@R: c(person("Philippe", "Cote", email = "pcote@ualberta.ca", role = c("aut", "cre")),person("Nima", "Safaian", email = "nima.safaian@gmail.com", role = c("aut")), person("Mikel", "Buchinski", email = "mbuchins@ualberta.ca", role = c("ctb")),person("Joe", "Rikk", email = "rikk@ualberta.ca", role = c("ctb")), person("Gabriela", "Sanchez", email = "gsanchez@ualberta.ca", role = c("ctb")), person("Usman", "Farooq", email = "ufarooq@ualberta.ca", role = c("ctb")))
 Description: Collection of functions and metadata to complement core packages
     in Finance and Commodities, including futures expiry tables and <https://www.morningstar.com/products/commodities-and-energy>
     API functions. See <https://github.com/risktoollib/RTL>.
