--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: RTL
 Type: Package
-Title: Risk Tool Library - Trading Analytics for Commodities
+Title: Risk Tool Library - Trading, Risk, Analytic for Commodities
 Version: 0.1.7
-Date: 2021-06-10
+Date: 2021-06-12
 Authors@R: c(person("Philippe", "Cote", email = "pcote@ualberta.ca", role = c("aut", "cre")),person("Nima", "Safaian", email = "nima.safaian@gmail.com", role = c("aut")), person("Mikel", "Buchinski", email = "mbuchins@ualberta.ca", role = c("ctb")),person("Joe", "Rikk", email = "rikk@ualberta.ca", role = c("ctb")), person("Gabriela", "Sanchez", email = "gsanchez@ualberta.ca", role = c("ctb")), person("Usman", "Farooq", email = "ufarooq@ualberta.ca", role = c("ctb")))
 Description: Collection of functions and metadata to complement core packages
     in Finance and Commodities, including futures expiry tables and <https://www.morningstar.com/products/commodities-and-energy>
     API functions. See <https://github.com/risktoollib/RTL>.
-Depends: R (>= 4.0)
+Depends: 
+    R (>= 4.0)
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
@@ -34,9 +35,7 @@ Imports:
     stringr,
     purrr,
     lubridate,
-    timetk,
     tibbletime,
-    quantmod,
     forecast,
     tidyquant,
     readr,
@@ -44,8 +43,9 @@ Imports:
     feasts,
     fabletools,
     jsonlite,
-    sp,
     RCurl,
     rlang,
     utils,
-    plotly
+    plotly,
+    timetk,
+    tidyverse
