--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,9 @@ Package: RTL
 Type: Package
 Title: Risk Tool Library - Trading, Risk, Analytic for Commodities
 Version: 0.1.9
-Date: 2021-12-14
+Date: 2021-12-15
 Authors@R: c(person("Philippe", "Cote", email = "pcote@ualberta.ca", role = c("aut", "cre")),person("Nima", "Safaian", email = "nima.safaian@gmail.com", role = c("aut")))
-Description: Collection of functions and metadata to complement core packages
-    in Finance and Commodities, including futures expiry tables and <https://www.morningstar.com/products/commodities-and-energy>
-    API functions. See <https://github.com/risktoollib/RTL>.
+Description: A toolkit for Commodities analytics, risk management and trading professionals. Includes functions for API calls to Morningstar Commodiites and Genscape.
 Depends: 
     R (>= 4.0)
 License: GPL (>= 3)
