--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Package: RTL
 Type: Package
 Title: Risk Tool Library - Trading, Risk, Analytic for Commodities
 Version: 0.1.9
-Date: 2021-12-15
+Date: 2021-12-16
 Authors@R: c(person("Philippe", "Cote", email = "pcote@ualberta.ca", role = c("aut", "cre")),person("Nima", "Safaian", email = "nima.safaian@gmail.com", role = c("aut")))
 Description: A toolkit for Commodities analytics, risk management and trading professionals. Includes functions for API calls to Morningstar Commodiites and Genscape.
 Depends: 
     R (>= 4.0)
-License: GPL (>= 3)
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 LazyDataCompression: xz
