--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: RTL
 Type: Package
 Title: Risk Tool Library - Trading, Risk, Analytic for Commodities
 Version: 0.1.9
-Date: 2021-12-16
+Date: 2021-12-18
 Authors@R: c(person("Philippe", "Cote", email = "pcote@ualberta.ca", role = c("aut", "cre")),person("Nima", "Safaian", email = "nima.safaian@gmail.com", role = c("aut")))
 Description: A toolkit for Commodities analytics, risk management and trading professionals. Includes functions for API calls to Morningstar Commodiites and Genscape.
 Depends: 
@@ -12,38 +12,34 @@ Encoding: UTF-8
 LazyData: true
 LazyDataCompression: xz
 URL: https://github.com/risktoollib/RTL
+RoxygenNote: 7.1.2
 Suggests: 
-    rgdal,
-    Quandl,
-    fitdistrplus,
     lpSolve,
     rugarch,
+    Quandl,
+    rgdal,
     PerformanceAnalytics
-RoxygenNote: 7.1.2
 Imports: 
-    zoo,
-    xts,
-    stats,
-    magrittr,
-    tibble,
+    stringr,
     dplyr,
     tidyr,
-    ggplot2,
-    httr,
-    stringr,
-    purrr,
+    plotly,
     lubridate,
+    xts,
+    readr,
+    ggplot2,
+    tsibble,
+    fabletools,
+    feasts,
+    httr,
+    jsonlite,
+    tidyquant,
     tibbletime,
     forecast,
-    tidyquant,
-    readr,
-    tsibble,
-    feasts,
-    fabletools,
-    jsonlite,
-    RCurl,
-    rlang,
-    utils,
-    plotly,
     timetk,
-    tidyverse
+    magrittr,
+    rlang,
+    RCurl,
+    purrr,
+    zoo,
+    tibble
