--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,5 +36,11 @@ export(swapFutWeight)
 export(swapIRS)
 export(swapInfo)
 export(tradeStats)
+import(tibble)
+import(xts)
+import(zoo)
 importFrom(magrittr,"%>%")
+importFrom(plotly,layout)
+importFrom(plotly,plot_ly)
+importFrom(purrr,map2)
 importFrom(rlang,":=")
