2021 12 28 RTL::expiry_table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,6 @@ export(swapFutWeight)
 export(swapIRS)
 export(swapInfo)
 export(tradeStats)
-import(tibble)
 import(xts)
 import(zoo)
 importFrom(magrittr,"%>%")
@@ -44,3 +43,4 @@ importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(purrr,map2)
 importFrom(rlang,":=")
+importFrom(tibble,is_tibble)
