--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,11 +36,11 @@ export(swapIRS)
 export(swapInfo)
 export(tradeStats)
 import(tsibble)
-import(xts)
-import(zoo)
 importFrom(magrittr,"%>%")
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(purrr,map2)
 importFrom(rlang,":=")
-importFrom(tibble,is_tibble)
+importFrom(tsibble,as_tsibble)
+importFrom(tsibble,group_by_key)
+importFrom(tsibble,index_by)
