--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(rolladjust)
 export(simGBM)
 export(simOU)
 export(simOUJ)
+export(simOUt)
 export(swapCOM)
 export(swapFutWeight)
 export(swapIRS)
