2022 05 04 rcpp functions in /src

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(swapInfo)
 export(tradeStats)
 import(rlang)
 import(tsibble)
+importFrom(Rcpp,sourceCpp)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
@@ -47,3 +48,4 @@ importFrom(rlang,":=")
 importFrom(tsibble,as_tsibble)
 importFrom(tsibble,group_by_key)
 importFrom(tsibble,index_by)
+useDynLib(RTL, .registration = TRUE)
