2022 05 15 removed dep to tidyquant::tq_get()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,6 @@ export(getGenscapePipeOil)
 export(getGenscapeStorageOil)
 export(getPrice)
 export(getPrices)
-export(ir_df_us)
 export(npv)
 export(promptBeta)
 export(refineryLP)
@@ -44,6 +43,7 @@ importFrom(magrittr,"%>%")
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(purrr,map2)
+importFrom(readr,parse_number)
 importFrom(rlang,":=")
 importFrom(tsibble,as_tsibble)
 importFrom(tsibble,group_by_key)
