--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,11 +16,8 @@ Depends:
     R (>= 4.0)
 Imports: 
     dplyr,
-    fabletools,
-    feasts,
     ggplot2,
     httr,
-    lifecycle,
     jsonlite,
     lubridate,
     magrittr,
@@ -38,14 +35,17 @@ Imports:
     zoo,
     glue,
     Rcpp,
-    tidyquant
+    lifecycle
 Suggests: 
     testthat (>= 3.0.0),
     covr,
     lpSolve,
     PerformanceAnalytics,
     rgdal,
-    rugarch
+    rugarch,
+    tidyquant,
+    feasts,
+    fabletools
 Encoding: UTF-8
 LazyData: true
 LazyDataCompression: xz
