--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(refineryLP)
 export(returns)
 export(rolladjust)
 export(simGBM)
+export(simMultivariates)
 export(simOU)
 export(simOUJ)
 export(simOUt)
