--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(chart_pairs)
 export(chart_spreads)
 export(chart_zscore)
 export(distdescplot)
+export(efficientFrontier)
 export(eia2tidy)
 export(fitOU)
 export(garch)
