--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(swapFutWeight)
 export(swapIRS)
 export(swapInfo)
 export(tradeStats)
+export(tradeStrategy)
 import(rlang)
 import(tsibble)
 importFrom(Rcpp,sourceCpp)
