eia2tidy migrated to EIA v2 API.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,8 @@ export(swapFutWeight)
 export(swapIRS)
 export(swapInfo)
 export(tradeStats)
-export(tradeStrategy)
+export(tradeStrategyDY)
+export(tradeStrategySMA)
 import(rlang)
 import(tsibble)
 importFrom(Rcpp,sourceCpp)
