--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Type: Package
 Package: RTL
 Title: Risk Tool Library - Trading, Risk, 'Analytics' for Commodities
 Version: 1.3.2
-Date: 2022-12-13
+Date: 2022-12-14
 Authors@R: c(
     person("Philippe", "Cote", , "pcote@ualberta.ca", role = c("aut", "cre")),
     person("Nima", "Safaian", , "nima.safaian@gmail.com", role = "aut")
@@ -57,3 +57,4 @@ Roxygen: list(markdown = TRUE)
 Config/testthat/edition: 3
 LinkingTo: 
     Rcpp
+BugReports: https://github.com/risktoollib/RTL/issues
