--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,15 @@ Type: Package
 Package: RTL
 Title: Risk Tool Library - Trading, Risk, 'Analytics' for Commodities
 Version: 1.3.3
-Date: 2023-04-10
+Date: 2023-04-11
 Authors@R: c(
     person("Philippe", "Cote", , "pcote@ualberta.ca", role = c("aut", "cre")),
     person("Nima", "Safaian", , "nima.safaian@gmail.com", role = "aut")
   )
 Description: A toolkit for Commodities 'analytics', risk management and
     trading professionals. Includes functions for API calls to
-    'Morningstar Commodities' and 'Genscape'.
+    <https://commodities.morningstar.com/#/>, <https://developer.genscape.com/>,
+    <https://www.bankofcanada.ca/valet/docs>, and <https://www.eia.gov/opendata/documentation.php>.
 License: MIT + file LICENSE
 URL: https://github.com/risktoollib/RTL
 Depends: 
