--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Type: Package
 Package: RTL
 Title: Risk Tool Library - Trading, Risk, 'Analytics' for Commodities
 Version: 1.3.4
-Date: 2023-09-30
+Date: 2023-10-20
 Authors@R: c(
     person("Philippe", "Cote", , "pcote@ualberta.ca", role = c("aut", "cre")),
     person("Nima", "Safaian", , "nima.safaian@gmail.com", role = "aut")
@@ -43,12 +43,12 @@ Suggests:
     testthat (>= 3.0.0),
     covr,
     lpSolve,
-    rgdal,
     rugarch,
     tidyquant,
     feasts,
     fabletools,
-    MASS
+    MASS,
+    sf
 Encoding: UTF-8
 LazyData: true
 LazyDataCompression: xz
