--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(simMultivariates)
 export(simOU)
 export(simOUJ)
 export(simOUt)
+export(spreadOption)
 export(swapCOM)
 export(swapFutWeight)
 export(swapIRS)
