--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(CRROption)
 export(CRReuro)
 export(GBSOption)
+export(barrierSpreadOption)
 export(bond)
 export(chart_PerfSummary)
 export(chart_eia_sd)
@@ -47,11 +48,15 @@ importFrom(Rcpp,sourceCpp)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
+importFrom(numDeriv,grad)
+importFrom(numDeriv,hessian)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(purrr,map2)
 importFrom(readr,parse_number)
 importFrom(rlang,":=")
+importFrom(stats,dnorm)
+importFrom(stats,pnorm)
 importFrom(tsibble,as_tsibble)
 importFrom(tsibble,group_by_key)
 importFrom(tsibble,index_by)
