--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,13 +43,12 @@ export(swapInfo)
 export(tradeStats)
 export(tradeStrategyDY)
 export(tradeStrategySMA)
+import(numDeriv)
 import(rlang)
 importFrom(Rcpp,sourceCpp)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
-importFrom(numDeriv,grad)
-importFrom(numDeriv,hessian)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(purrr,map2)
