--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,20 +43,17 @@ export(swapInfo)
 export(tradeStats)
 export(tradeStrategyDY)
 export(tradeStrategySMA)
+import(numDeriv)
 import(rlang)
 importFrom(Rcpp,sourceCpp)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
-importFrom(numDeriv,grad)
-importFrom(numDeriv,hessian)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(purrr,map2)
 importFrom(readr,parse_number)
 importFrom(rlang,":=")
-importFrom(stats,dnorm)
-importFrom(stats,pnorm)
 importFrom(tsibble,as_tsibble)
 importFrom(tsibble,group_by_key)
 importFrom(tsibble,index_by)
