--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(swapInfo)
 export(tradeStats)
 export(tradeStrategyDY)
 export(tradeStrategySMA)
+import(numDeriv)
 import(rlang)
 importFrom(Rcpp,sourceCpp)
 importFrom(glue,glue)
